--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="puzzle"></div>
-    <div id="solve-button">Solve</div>
+    <button id="solve-button">Solve</button>
 
 
     <script src="script.js"></script>
