--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="puzzle"></div>
     <button id="solve-button">Solve</button>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="script.js"></script>
 </body>
